@@ -1,5 +1,6 @@
 use strict;
 use warnings;
+BEGIN { $Test2::API::DO_DEPTH_CHECK = 1 }
 BEGIN { require "t/tools.pl" };
 
 use Test2::API qw/context/;
@@ -104,9 +105,6 @@ like(
     qr/A context appears to have been destroyed without first calling release/,
     "got expected warning"
 );
-
-
-
 
 
 
